--- a/lab 4/about.html
+++ b/lab 4/about.html
@@ -5,10 +5,12 @@
     </head>
     <body>
         <h1> Jhon Wesly T. Buban</h1>
-        <p>Hi my name is Jhon Wesly T. Buban, Im currently residing at Pasay City, Breeze Residence Roxas Boulevard 
-        and I'm 20 years old. I'm currently studying at Technological University Philippines - Manila 
-        taking Bachelor of Science in Industrial Education majoy in Information Communication Technology.
-        I dont have any hobbies but I do love to play games and watch anime during my free time.
+        <p>
+                Hi my name is Jhon Wesly T. Buban, Im currently residing at Pasay City, Breeze Residence Roxas Boulevard 
+            and I'm 20 years old. I'm currently studying at Technological University Philippines - Manila 
+            taking Bachelor of Science in Industrial Education majoy in Information Communication Technology.
+            I dont have any hobbies but I do love to play games and watch anime during my free time.
+        </p>
         <ul>
             <li>Crammer</li>
             <li>Procrastinator</li>
