--- a/lab 4/favorites.html
+++ b/lab 4/favorites.html
@@ -4,13 +4,29 @@
         <title>"My favorites"</title>
     </head>
     <body>
-        <h1>"My favorites"</h1>
+         <h1>"My favorite books"</h1>
         <ol>
-            <li>Book - Project Loki</li>
-            <li>Movie - All Marvels Movies</li>
-            <li>Movie - Hidden Figures</li>
-            <li>Song - We could happen</li>
-            <li>Song - Photograph</li>
+            <li>Project Loki</li>
+            <li>The Hobbit</li>
+            <li>Alchemist</li>
+            <li>1984</li>
+            <li>Dekada '70</li>
+        </ol>
+        <h1>"My favorite movies"</h1>
+        <ol>
+            <li>Avengers Infinity War</li>
+            <li>Avengers Endgame</li>
+            <li>Thor loki and thunder</li>
+            <li>Hidden Figures</li>
+            <li>The purple crayon</li>
+        </ol>
+         <h1>"My favorite song"</h1>
+        <ol>
+            <li>We could happen</li>
+            <li>Photogrpah</li>
+            <li>Stiches</li>
+            <li>There's nothing hokding me back</li>
+            <li>Mundo</li>
         </ol>
         <ul>
             <li><a href="https://web.facebook.com/home.php" target="_blank">Facebook</a></li>
