--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <li> Lab 4: HTML5 (Part 1)
           <ul>
             <li>
-              <a href="lab4/about.html" target="activity-frame">About Me</a>
+              <a href="about.html" target="activity-frame">About Me</a>
             </li>
             <li>
               <a href="lab4/favorites.html" target="activity-frame">Favorites</a>
